<resources>
    <string name="app_name">考益考</string>
    <string name="title_activity_log_result">MainActivity</string>
    <string name="title_home">主页</string>
    <string name="title_community">社区</string>
    <string name="title_mine">我的</string>

    <string name="chat_all">全部</string>
    <string name="chat_talk">研友杂谈</string>
    <string name="chat_lecture">考研讲座</string>
    <string name="chat_secondHand">考研课本</string>
    <string name="teacher_math">数学</string>
    <string name="teacher_english">英语</string>
    <string name="teacher_polity">政治</string>
    <string name="teacher_Profession">专业课</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="securityQuestion">
        <item><font color="#009fcc">你的初恋姓/叫什么</font></item>
        <item><font color="#009fcc">你的初中物理老师是谁</font></item>
        <item><font color="#009fcc">你父亲/母亲的姓名</font></item>
        <item><font color="#009fcc">你最喜欢的游戏名字</font></item>
        <item><font color="#009fcc">你的小学名字</font></item>
        <item><font color="#009fcc">你第一款通关的游戏名字</font></item>
    </string-array>

    <string-array name="professionalTeacher">
        <item>计算机</item>
        <item>法学</item>
        <item>医学</item>
        <item>力学</item>
        <item>历史学</item>
        <item>文学</item>
        <item>管理学</item>
        <item>经济学</item>
        <item>教育学</item>
        <item>哲学</item>
        <item>物理学</item>
        <item>心理学</item>
        <item>数学</item>
        <item>艺术学</item>
        <item>农学</item>
    </string-array>

</resources>