<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Chat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/ChatButtonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_all" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/talk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_talk" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_lecture" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_secondHand" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/ChatViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </androidx.viewpager2.widget.ViewPager2>

    </LinearLayout>

</FrameLayout>