<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Teacher">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/TeacherButtonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/math"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_math" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_english" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/polity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_polity" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/profession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_Profession" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/TeacherViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </androidx.viewpager2.widget.ViewPager2>

    </LinearLayout>

</FrameLayout>