<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IndexActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" >
    </androidx.viewpager2.widget.ViewPager2>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/buttonView"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/home"
                android:text="@string/title_home" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/community"
                android:text="@string/title_community" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/mine"
                android:text="@string/title_mine" />
        </com.google.android.material.tabs.TabLayout>

</LinearLayout>